# gaging_template

./: Makefile  README.md  pyproject.toml
config/: gdata_config.ini  gdata_config.py
docs/: mkdocs.yml
docs/docs/: index.md
g_data_template/: dataset.py  plots.py
python_scripts/: __init__.py  features.py
python_scripts/data_aquisition/: gdata_mapping.py  gdata_sql_queries.py  load_data.py
python_scripts/modeling/: predict.py  train.py
