[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python_scripts"
version = "0.0.1"
description = "template for stream gaging projects based on DrivenDatas Cookiecutter DataScience"
readme = "README.md"
requires-python = "~=3.14.2"
authors = [
  { name = "Ian Higgins" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
gdata_mapping = "python_scripts.data_aquisition.gdata_mapping:app"

[tool.ruff]
line-length = 99
src = ["python_scripts"]
include = ["pyproject.toml", "python_scripts/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]
force-sort-within-sections = true

[tool.ruff.lint.isort]
known-first-party = ["python_scripts"]pip install -e .